# Chat

src/client/chat_client/: chat_client.pro
src/server/: CMakeLists.txt  server_main.cpp
src/server/include/db/: server.h
